CSS styling changed

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<title>Pawel Litwin's Personal Site</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<table>
+			<thead>
+				<th></th>
+				<th></th>
+			</thead>
 			<tr>
 				<td><img width="200" src="images/plitwin.jpg" alt="Pawel Litwin profile photo"></td>
 				<td><h1>Pawel Litwin</h1>
-				<em><p>Engineer, photographer, aspiring programmer</p></em></td>
-			</tr>
-		</table>
-		<hr>
-		<h3>Education</h3>
+					<em><p>Engineer, photographer, aspiring programmer</p></em></td>
+				</tr>
+			</table>
+			<hr>
+			<h3>Education</h3>
 		<table cellspacing="10">
 			<thead>
 				<th>Dates</th>
@@ -51,6 +56,10 @@
 		<hr>
 		<h3>Skills</h3>
 		<table cellspacing="10">
+			<thead>
+				<th></th>
+				<th></th>
+			</thead>
 			<tbody>
 				<tr>
 					<td>Photography</td>
